添加 emby 管理功能
